<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FriendProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:orientation="horizontal">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/photo"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/background_icon"
                android:scaleType="centerCrop"
                app:riv_corner_radius="@dimen/_8sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nickName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/gray_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/friend_profile"
            android:textColor="@color/primary"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@color/gray_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:maxLines="1"
                android:text="@string/real_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/realName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Age"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Birthday"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Region"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Phone No."
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/phoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Occupation"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@color/gray_dark" />
    </LinearLayout>

    <Button
        android:id="@+id/sendMsgBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/send_message"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/removeBtn" />

    <Button
        android:id="@+id/setBackgroundBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/set_background"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/removeBtn" />

    <Button
        android:id="@+id/removeBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/remove_friend"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/sendMsgBtn"
        app:layout_constraintStart_toStartOf="@+id/sendMsgBtn"
        app:layout_constraintBottom_toTopOf="@+id/backBtn"/>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="Back"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/removeBtn"
        app:layout_constraintStart_toStartOf="@+id/removeBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>