<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateProfileActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/background_icon"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/update_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_20sdp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/real_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/inputRealName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/inputGender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Age"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_10sdp"/>
            <EditText
                android:id="@+id/inputAge"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Day of Birth"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/inputDob"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="date"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Region"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/inputRegion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Phone No."
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/inputPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Occupation"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <EditText
                android:id="@+id/inputOccupation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/background_input"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_13ssp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:animateLayoutChanges="true">

                <Button
                    android:id="@+id/uploadBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/upload"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>